<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    android:id="@+id/layout_history_cardView"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:elevation="10dp"
    app:cardCornerRadius="0dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/Field_history_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:textStyle="bold|italic"
                android:textColor="@color/black"
                android:text="@string/Field" />
            <TextView
                android:id="@+id/Field_history_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:textSize="16dp"
                android:textColor="@color/black"
                android:text="@string/Geography" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/Difficulty_history_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:textStyle="bold|italic"
                android:textColor="@color/black"
                android:text="@string/Difficulty" />
            <TextView
                android:id="@+id/Difficulty_history_2"
                android:layout_marginLeft="2dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:textColor="@color/black"
                android:text="@string/Hard" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/Correct_Answer_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:textStyle="bold|italic"
                android:textColor="@color/black"
                android:text="@string/Correct_Nums" />
            <TextView
                android:id="@+id/Correct_Answer_2"
                android:layout_marginLeft="2dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:textColor="@color/black"
                android:text="2/5" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/Date_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:textStyle="bold|italic"
                android:textColor="@color/black"
                android:text="@string/Play_Date" />
            <TextView
                android:id="@+id/Date_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:textSize="16dp"
                android:textColor="@color/black"
                android:text="11:30, 29/11/2022" />
        </LinearLayout>

    </LinearLayout>



</androidx.cardview.widget.CardView>