<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DifficultyFragment">

    <TextView
        android:id="@+id/DifficultyMessage"
        android:layout_width="234dp"
        android:layout_height="64dp"
        android:layout_centerInParent="true"
        android:text="@string/difficulty_selection_message"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="22sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.254" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/DifficultyMessage"
        app:layout_constraintVertical_bias="0.213">

        <Button
            android:id="@+id/Easy"
            android:layout_width="320dp"
            android:layout_height="78dp"
            android:background="#FFFFFF"
            android:drawableEnd="@drawable/difficulty_easy"
            android:fontFamily="sans-serif-light"
            android:paddingStart="60dp"
            android:paddingRight="50dp"
            android:text="@string/Easy"
            android:textAlignment="textStart"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:cornerRadius="0dp" />

        <Button
            android:id="@+id/Medium"
            android:layout_width="320dp"
            android:layout_height="78dp"
            android:layout_marginTop="10dp"
            android:background="#FFFFFF"
            android:drawableEnd="@drawable/difficulty_medium"
            android:fontFamily="sans-serif-light"
            android:paddingStart="60dp"
            android:paddingRight="50dp"
            android:text="@string/Medium"
            android:textAlignment="textStart"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:cornerRadius="0dp" />

        <Button
            android:id="@+id/Hard"
            android:layout_width="320dp"
            android:layout_height="78dp"
            android:layout_marginTop="10dp"
            android:background="#FFFFFF"
            android:drawableEnd="@drawable/difficulty_hard"
            android:fontFamily="sans-serif-light"
            android:paddingStart="60dp"
            android:paddingRight="50dp"
            android:text="@string/Hard"
            android:textAlignment="textStart"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:cornerRadius="0dp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>